<resources>
    <string name="app_name">中大闲置</string>
    <string name="home_name">首页</string>
    <string name="new_name">发布</string>
    <string name="msg_name">消息</string>
    <string name="person_name">个人</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_book">new_book</string>
    <string name="title_activity_new_goods">new_goods</string>
    <string name="title_activity_new_skill">new_skill</string>
    <string name="title_activity_detial_info">detial_info</string>
    <string name="title_activity_user_info">user_info</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_edit_user">EditUser</string>
    <string name="pull_to_refresh_top_pull">下拉刷新</string>
    <string name="pull_to_refresh_top_release">释放刷新</string>
    <string name="pull_to_refresh_top_refreshing">加载中...</string>
    <string name="pull_to_refresh_bottom_pull">继续拖动</string>
    <string name="pull_to_refresh_bottom_release">放开装载更多</string>
    <string name="pull_to_refresh_bottom_refreshing">正在装载数据..</string>
    <string name="title_activity_other_user_info">other_user_info</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
</resources>
