<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:descendantFocusability="blocksDescendants"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:src="@mipmap/ic_launcher"
            app:border_color="#ccc"
            app:border_width="1dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:lines="1"
                    android:text="@string/app_name"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:gravity="center_horizontal"
                    android:text="60元"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/msg_name"
                android:textSize="11sp"/>
        </LinearLayout>

        <LinearLayout
            android:descendantFocusability="blocksDescendants"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.administrator.flea_market.home_widget.NoScrollGridView
                android:id="@+id/gridview"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:columnWidth="100dp"
                android:gravity="center"
                android:horizontalSpacing="4dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            >

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:lines="2"
                android:text="@string/hello_world"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#66CCFF"
            android:layout_marginRight="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            >

            <TextView
                android:id="@+id/place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:lines="2"
                android:text="@string/hello_world"
                android:textSize="11sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>